[package]
name = "exrs"
authors = ["suquiya <22910980+suquiya@users.noreply.github.com>"]
edition = "2024"
description = "exrs is a command executor wrapping `std::process::Command`."
license = "MIT"
repository = "https://github.com/suquiya/exrs"
documentation = "https://docs.rs/exrs"
homepage = "https://github.com/suquiya/exrs"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["command", "arg", "command-line", "utility"]

[features]
cmd = []
shell = ["cmd"]
default = ["cmd"]

[dependencies]
